--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/proyecto_web
+spring.datasource.url = jdbc:mariadb://localhost:3306/proyecto_web
 spring.datasource.username=JesusFerrer
 spring.datasource.password =JesusFerrer
 
@@ -21,7 +21,7 @@ springdoc.swagger-ui.operationsSorter=method
 
 application.store.base-path = C:\pruebas
 
-jwt.secret=3j459hyn34+dfd?2d-Dr_aaLFsw·##/iu(lkl495jgk30985uitjjrk3905tk590
+jwt.secret=3j459hyn34+dfd?2d-Dr_aaLFswï¿½##/iu(lkl495jgk30985uitjjrk3905tk590
 
 #minutos
 jwt.expired-time= 10 
